Lab6Demo/compiler_errors.txt
filename.cpp: In function 
   ‘void broken3(const std::map<std::__cxx11::basic_string<char>, 
                 movie_deets>&)’:

filename.cpp:XXX:41: error: passing 
   ‘const std::map<std::__cxx11::basic_string<char>, movie_deets>’ 
   as ‘this’ argument discards qualifiers [-fpermissive]
  XXX |                     << movies[user_input].crew_members.size()
      |              
                                 ^
In file included from /usr/include/c++/12.2.1/map:61,
                 from filename.cpp:6:
/usr/include/c++/12.2.1/bits/stl_map.h:XXX:7: note:   in call to 
   ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& 
      std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) 
      [with _Key = std::__cxx11::basic_string<char>; _Tp = movie_deets; 
       _Compare = std::less<std::__cxx11::basic_string<char> >; 
       _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>,
         movie_deets> >; 
       mapped_type = movie_deets; 
       key_type = std::__cxx11::basic_string<char>
      ]’
  XXX |       operator[](const key_type& __k)
      |       ^~~~~~~~
